--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: fit-content;
 }
 
 #main-container{
