--- a/src/style.css
+++ b/src/style.css
@@ -131,11 +131,12 @@ label{
   transition: all .5s ease;
   cursor: pointer;
   word-wrap: break-word;
+  max-width: 300px
 }
 
 .password-container:hover{
   box-shadow: 0px 0px 5px white;
-  background-color: #2e3f579c;
+  background-color: #2e3f579c;;
 }
 
 .password{
